--- a/WebAppSampleBSCS1/Views/Home/Index.cshtml
+++ b/WebAppSampleBSCS1/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 <h1>Magandang Buhay!!! Keep motivated!!!!</h1>
+<h2>Hello! :D</h2>
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
